--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
                   <input class="header-nav__search-input" type="search" placeholder="крем-брюле">
                 </form>
               </li>
-              <li class="header-nav__item header-nav__item--user header-nav__item--login"><a href="">Вход
-              </a></li>
+              <li class="header-nav__item header-nav__item--user header-nav__item--login"><a href="">Вход</a></li>
               <li class="header-nav__item header-nav__item--user header-nav__item--basket"><a href="">Корзина</a></li>
             </ul>
           </nav>
@@ -109,51 +108,51 @@
             <a class="stock-btn" href="blank.html">Хочу шокладки!</a>
           </div>
         </div>
+        <div class="catalog__wrap catalog__wrap--hit">
+          <ul class="catalog catalog--hit">
+            <li class="catalog__item catalog__item--hit">
+              <article class="box-catalog__inner box-catalog__inner--hit">
+                <h3 class="catalog-item__title catalog-item__title--hit">Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+                <p class="catalog-item__price">310 ₽<span>/кг</span></p>
+                <div class="catalog-item__img">
+                  <img src="img/ice-1.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+                </div>
+                <a class="catalog-item__button" href="blank.html">Быстрый просмотр</a>
+              </article>
+            </li>
+            <li class="catalog__item catalog__item--hit">
+              <article class="box-catalog__inner box-catalog__inner--hit">
+                <h3 class="catalog-item__title catalog-item__title--hit">Сливочно-кофейное с кусочками шоколада</h3>
+                <p class="catalog-item__price">380 ₽<span>/кг</span></p>
+                <div class="catalog-item__img">
+                  <img src="img/ice-2.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+                </div>
+                <a class="catalog-item__button" href="blank.html">Быстрый просмотр</a>
+              </article>
+            </li>
+            <li class="catalog__item catalog__item--hit">
+              <article class="box-catalog__inner box-catalog__inner--hit">
+                <h3 class="catalog-item__title catalog-item__title--hit">Сливочно-клубничное с присыпкой из белого шоколада</h3>
+                <p class="catalog-item__price">355 ₽<span>/кг</span></p>
+                <div class="catalog-item__img">
+                  <img src="img/ice-3.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                </div>
+                <a class="catalog-item__button" href="blank.html">Быстрый просмотр</a>
+              </article>
+            </li>
+            <li class="catalog__item catalog__item--hit">
+              <article class="box-catalog__inner box-catalog__inner--hit">
+                <h3 class="catalog-item__title catalog-item__title--hit">Сливочное крем-брюле с карамельной подливкой</h3>
+                <p class="catalog-item__price">415 ₽<span>/кг</span></p>
+                <div class="catalog-item__img">
+                  <img src="img/ice-4.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+                </div>
+                <a class="catalog-item__button" href="blank.html">Быстрый просмотр</a>
+              </article>
+            </li>
+          </ul>
+        </div>
       </section>
-      <div class="catalog__wrap catalog__wrap--hit">
-        <ul class="catalog catalog--hit">
-          <li class="catalog__item catalog__item--hit">
-            <article class="box-catalog__inner box-catalog__inner--hit">
-              <h3 class="catalog-item__title catalog-item__title--hit">Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
-              <p class="catalog-item__price">310 ₽<span>/кг</span></p>
-              <div class="catalog-item__img">
-                <img src="img/ice-1.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-              </div>
-              <a class="catalog-item__button" href="blank.html">Быстрый просмотр</a>
-            </article>
-          </li>
-          <li class="catalog__item catalog__item--hit">
-            <article class="box-catalog__inner box-catalog__inner--hit">
-              <h3 class="catalog-item__title catalog-item__title--hit">Сливочно-кофейное с кусочками шоколада</h3>
-              <p class="catalog-item__price">380 ₽<span>/кг</span></p>
-              <div class="catalog-item__img">
-                <img src="img/ice-2.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-              </div>
-              <a class="catalog-item__button" href="blank.html">Быстрый просмотр</a>
-            </article>
-          </li>
-          <li class="catalog__item catalog__item--hit">
-            <article class="box-catalog__inner box-catalog__inner--hit">
-              <h3 class="catalog-item__title catalog-item__title--hit">Сливочно-клубничное с присыпкой из белого шоколада</h3>
-              <p class="catalog-item__price">355 ₽<span>/кг</span></p>
-              <div class="catalog-item__img">
-                <img src="img/ice-3.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-              </div>
-              <a class="catalog-item__button" href="blank.html">Быстрый просмотр</a>
-            </article>
-          </li>
-          <li class="catalog__item catalog__item--hit">
-            <article class="box-catalog__inner box-catalog__inner--hit">
-              <h3 class="catalog-item__title catalog-item__title--hit">Сливочное крем-брюле с карамельной подливкой</h3>
-              <p class="catalog-item__price">415 ₽<span>/кг</span></p>
-              <div class="catalog-item__img">
-                <img src="img/ice-4.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-              </div>
-              <a class="catalog-item__button" href="blank.html">Быстрый просмотр</a>
-            </article>
-          </li>
-        </ul>
-      </div>
       <div class="info__wrap">
         <section class="info">
           <h2 class="info__title">Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого собственного проиводства на развес</h2>
